--- a/src/index.html
+++ b/src/index.html
@@ -415,13 +415,13 @@
     <footer
       class="mt-6 w-full rounded-lg p-6 shadow md:flex md:items-center md:justify-between md:px-12"
     >
-      <span class="text-mini text-accent sm:text-center md:text-base"
+      <span class="text-sm text-accent sm:text-center md:text-base"
         >© 2022
         <a href="https://regalia_website" class="hover:underline">Regalia™</a>.
         All Rights Reserved.
       </span>
       <ul
-        class="flex flex-wrap items-center pt-3 text-mini text-text sm:mt-0 md:text-base"
+        class="flex flex-wrap items-center pt-3 text-sm text-text sm:mt-0 md:text-base"
       >
         <li>
           <a href="about/" class="mr-4 hover:underline md:mr-6">About</a>
