--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
       animation-duration: 2s;
       animation-fill-mode: both;
       animation-timing-function: linear;
-      box-shadow: 0px 0px 1px white;
+      box-shadow: 0px 0px 1px var(--text);
     }
     .preloader-page .loader__circle:nth-of-type(1) {
       animation-direction: reverse;
