updated github actions and added events modals.js type=module

--- a/src/events/index.html
+++ b/src/events/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./events.css" />
-    <script defer src="./modals.js"></script>
+    <script type="module" defer src="./modals.js"></script>
 </head>
 <body>
 <img src="images\bgd.webp" id="bg" alt="">
@@ -347,7 +347,7 @@ Coordinators :- <br>
             <li> The spoof should be a caricature of any popular advertisement or can be an original creation too, it can be a photo or a video and duration should be under 2 minutes, if it is a video.</li>
             <li>Any obscenity or vulgarity in the ad will lead to immediate disqualification. Using curse words in the ad or using beep in it’s place will also lead to disqualification.</li>
             <li>. Submissions will be taken via google form provided above and for safety reasons, the participating team will also be asked to provide a drive link for their spoof in the google form.</li>
-            <li>The submissions must be done within 17th May 2022, 11:59 PM.</li> 
+            <li>The submissions must be done within 17th May 2022, 11:59 PM.</li>
             <li>The results will be declared on 19th May, 2022.</li>
             <li>Top 3 submissions will be awarded a prize for the spoof and asked to be present on the final day of the event.</li>
             </ol>
