format index.html

--- a/src/index.html
+++ b/src/index.html
@@ -58,9 +58,9 @@
       --bg: #0d0d0d;
       --text: #f2f2f2;
     }
-* {
-	-webkit-tap-highlight-color: transparent;
-}
+    * {
+      -webkit-tap-highlight-color: transparent;
+    }
     .preloader-page {
       position: fixed;
       top: 0;
@@ -219,7 +219,7 @@
             </li>
             <li>
               <a
-								data-wip
+                data-wip
                 href="#artist"
                 class="block border-b border-text py-2 pr-4 pl-3 text-text hover:bg-accent md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-accent"
                 aria-current="Artist"
@@ -286,17 +286,16 @@
         <div class="mt-6 flex items-center space-x-6 text-sm sm:text-base">
           <a
             href="events/"
-						class="text-background bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+            class="rounded-lg bg-gradient-to-r from-red-200 via-red-300 to-yellow-200 px-5 py-2.5 text-center text-sm font-medium text-background hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100"
             >See events</a
           >
           <a
-						data-wip
+            data-wip
             href="about/"
-						class="text-background border border-red hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-red-100 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-            >
-						About Regalia
-					</a
+            class="border-red rounded-lg border px-5 py-2.5 text-center text-sm font-medium text-background hover:bg-gradient-to-bl focus:outline-none focus:ring-4 focus:ring-red-100"
           >
+            About Regalia
+          </a>
         </div>
 
         <div class="absolute bottom-16 sm:right-12">
