--- a/src/events/index.html
+++ b/src/events/index.html
@@ -10,17 +10,16 @@
       href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@900&family=Montserrat:wght@800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./events.css" />
-    <script type="module" defer src="./modals.js"></script>
+		<link rel="stylesheet" href="./events.css" />
   </head>
   <body>
-    <img src="images\bgd.webp" id="bg" alt="" />
+    <img src="./images\bgd.webp" id="bg" alt="" />
     <div class="headtext">Events.</div>
     <div class="card-collection">
       <div class="card">
         <img
           id="card-image"
-          src="images\pexels-thibault-trillet-167636.webp"
+          src="./images\pexels-thibault-trillet-167636.webp"
           alt="battle of bands"
           loading="lazy"
           style="width: 100%"
@@ -672,5 +671,7 @@
     </div>
 
     <div id="overlay"></div>
+
+    <script type="module" src="./modals.js"></script>
   </body>
 </html>
