--- a/src/index.html
+++ b/src/index.html
@@ -361,121 +361,121 @@
           <ul data-carousel class="splide__list w-full will-change-transform">
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/1.jpg"
+                src="images/carousel/1.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/2.jpg"
+                src="images/carousel/2.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/3.jpg"
+                src="images/carousel/3.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/4.jpg"
+                src="images/carousel/4.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/5.jpg"
+                src="images/carousel/5.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/6.jpg"
+                src="images/carousel/6.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/7.jpg"
+                src="images/carousel/7.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/8.jpg"
+                src="images/carousel/8.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/9.jpg"
+                src="images/carousel/9.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/10.jpg"
+                src="images/carousel/10.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/11.jpg"
+                src="images/carousel/11.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/12.jpg"
+                src="images/carousel/12.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/13.jpg"
+                src="images/carousel/13.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/14.jpg"
+                src="images/carousel/14.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/15.jpg"
+                src="./images/carousel/15.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/16.jpg"
+                src="images/carousel/16.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/17.jpg"
+                src="images/carousel/17.jpg"
                 class="block h-full w-full rounded-lg object-cover object-top"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/18.jpg"
+                src="images/carousel/18.jpg"
                 class="block h-full w-full rounded-lg object-cover object-top"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/19.jpg"
+                src="images/carousel/19.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
             <li class="splide__slide" data-splide-interval="2000">
               <img
-                data-splide-lazy="./images/carousel/20.jpg"
+                src="images/carousel/20.jpg"
                 class="block h-full w-full rounded-lg object-cover object-center"
               />
             </li>
